Enable Kafka trace correlation for Spark streaming